Fix alignment issue with experiences skill lists

--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -294,6 +294,11 @@ p {
   margin-bottom: 20px;
 }
 
+.main-wrapper .experiences-section .item .skillsProject {
+    position: relative;
+    float: left;
+}
+
 .main-wrapper .upper-row {
   position: relative;
   overflow: hidden;
